--- a/blog/Templates/blog/post_list.html
+++ b/blog/Templates/blog/post_list.html
@@ -16,7 +16,7 @@
         <div>
             <p>published: 14.06.2014, 12:14</p>
             <h2><a href="">My second post</a></h2>
-            <p>Aenean eu leo quam. Pellentesque ornare sem lacinia quam venenatis vestibulum.</p>
+            <p>espero q esta vaina funcione</p>
         </div>
     </body>
 </html>
