--- a/blog/Templates/blog/post_list.html
+++ b/blog/Templates/blog/post_list.html
@@ -1,21 +1,21 @@
 <html>
     <head>
-        <title>Django Girls blog</title>
+        <title>salomon es gay</title>
     </head>
     <body>
         <div>
-            <h1><a href="/">Django Girls Blog</a></h1>
+            <h1><a href="/">penenene</a></h1>
         </div>
 
         <div>
-            <p>published: 14.06.2014, 12:14</p>
-            <h2><a href="">My first post</a></h2>
-            <p>Aenean eu leo quam. Pellentesque ornare sem lacinia quam venenatis vestibulum.</p>
+            <p>popo sexo</p>
+            <h2><a href="">sdadda</a></h2>
+            <p>popopopopopopopo</p>
         </div>
 
         <div>
-            <p>published: 14.06.2014, 12:14</p>
-            <h2><a href="">My second post</a></h2>
+            <p>4</p>
+            <h2><a href="">puta bida</a></h2>
             <p>espero q esta vaina funcione</p>
         </div>
     </body>
